# neurolab

./: README.md  main.py  pyproject.toml  pytest.ini
docs/: README.md
src/neurolab/: cli.py
src/neurolab/adapters/: __init__.py
src/neurolab/adapters/core/: __init__.py  base.py  exceptions.py  output.py  registry.py  router.py
src/neurolab/adapters/implementations/: __init__.py
src/neurolab/adapters/implementations/neo/: __init__.py  ncs_adapter.py
src/neurolab/adapters/implementations/tabular/: __init__.py  csv_adapter.py  json_adapter.py
src/neurolab/adapters/pipeline/: __init__.py  adapter_pipeline.py
src/neurolab/data_interface/: collectors.py  hashing.py  models.py  orchestrator.py
src/neurolab/interfaces/: cli.py
src/neurolab/storage/: manifest_store.py  roster_store.py
test_data/session1/: brain.parquet  data.csv
tests/: conftest.py  test_collectors.py
tests/adapters/integration/: test_pipeline_manifest.py
tests/adapters/unit/: test_adapter_pipeline.py  test_csv_adapter.py  test_json_adapter.py  test_ncs_adapter.py  test_output.py  test_registry.py  test_router.py
tests/data_interface/integration/: test_collect_source.py  test_manifest_id.py
tests/data_interface/unit/: test_filesystem_collector.py  test_hash_file_sha256.py  test_hash_manifest_id.py  test_infer_media_type.py  test_models.py
tests/integration/data_interface/: test_collect_source.py
tests/interfaces/: .gitkeep  test_cli.py
tests/storage/unit/: test_manifest_store.py  test_roster_store.py
tests/unit/collectors/: test_filesystem_collector.py
