[project]
name = "neurolab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
neurolab = "neurolab.interfaces.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, isolated).",
    "integration: integration tests (may use filesystem, external data).",
    "data_interface: tests for the data_interface layer (models, hashing, collectors, orchestrator).",
    "storage: tests for the storage layer (manifest store).",
    "interfaces: tests for the interfaces layer (CLI).",
    "adapters: tests for the adapters layer (core, pipeline, implementations).",
]
